Create accordion with JS

--- a/mini_project2/style.css
+++ b/mini_project2/style.css
@@ -4,18 +4,36 @@
   width: 100%;
   cursor: pointer;
   padding: 15px;
+  border-bottom: 1px solid #ccc;
 }
 
-.accordion > div > span:after {
-  content: '\002b';
+.accordion > div:first-child > span {
+  border-radius: 10px 10px 0 0;
+}
+
+.accordion > div:last-child > span {
+  border-radius: 0 0 10px 10px;
+  border-bottom: 0;
+}
+
+.accordion > div.show:last-child > span {
+  border-radius: 0;
+}
+
+.accordion > div.show:last-child > div {
+  border-bottom: 1px solid #ccc;
+}
+
+.accordion > div > span::after {
+  content: '+';
   float: right;
 }
 
-.accordion > div.show > span:after {
-  content: '\2212';
+.accordion > div.show > span::after {
+  content: '-';
 }
 
-.accordion > div > span:hover,
+.accordion > div > span:hover, 
 .accordion > div.show > span {
   background-color: #ccc;
 }
@@ -24,11 +42,13 @@
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   /* display: none; */
-  max-height: 0; 
+  max-height: 0;
   overflow: hidden;
-  transition: all 0.5s;
-}
-
+  transition: all 0.7s;
+  padding: 0 15px;
+  
+  }
+  
 .accordion > div.show > div {
   /* display: block; */
   padding: 15px;
